--- a/tigislangfn.html
+++ b/tigislangfn.html
@@ -99,7 +99,7 @@
                 explanation: "比喻受人恩惠，要懂得知恩圖報，加倍奉還。"
             },
             {
-                proverb_taigi: "三人共一心，烏塗變成金",
+                proverb_taigi: "三人共一心，烏塗變做金",
                 proverb_lomaji: "Sann lâng kāng tsi̍t sim, oo-thôo pìnn-tsò kim",
                 category: "感恩/合作",
                 options: ["三個人一起挖土比較快", "團結力量大，同心協力就能成功", "黑色的泥土很值錢", "心誠則靈，祈禱就會實現"],
@@ -173,7 +173,7 @@
                 explanation: "指自己為人父母，經歷養兒育女的辛苦後，才能真正體會當年自己父母養育的辛勞與付出。"
             },
             {
-                proverb_taigi: "兄弟若同心，烏塗變成金",
+                proverb_taigi: "兄弟若同心，烏塗變做金",
                 proverb_lomaji: "Hiann-tī nā kāng sim, oo-thôo pìnn-tsò kim",
                 category: "家人",
                 options: ["兄弟同心協力，就能克服萬難", "兄弟一起挖土可以找到黃金", "黑色的泥土很值錢", "兄弟感情好會變有錢"],
@@ -198,7 +198,7 @@
                 explanation: "指學習是永無止境的，即使年紀大了，也應該持續學習新知。"
             },
             {
-                proverb_taigi: "近朱者赤，近墨者黑",
+                proverb_taigi: "近朱者赤，近墨者烏",
                 proverb_lomaji: "Kīn tsu tsiá tshiah, kīn ba̍k tsiá hik",
                 category: "學習",
                 options: ["環境對人的影響很大", "紅色和黑色是重要的顏色", "靠近硃砂會變紅", "不要靠近墨水"],
