--- a/tigislangfn.html
+++ b/tigislangfn.html
@@ -165,8 +165,8 @@
                 explanation: "比喻父母對子女的關愛如同長流的溪水一樣，永無止盡、連綿不絕。"
             },
              {
-                proverb_taigi: "飼囝毋知父母時",
-                proverb_lomaji: "Tshī kiánn m̄ tsai pē-bú sî",
+                proverb_taigi: "飼囝才知父母時",
+                proverb_lomaji: "Tshī kiánn tsiah tsai pē-bú sî",
                 category: "家人",
                 options: ["養育子女後才能體會父母的辛勞", "不知道父母什麼時候養小孩", "養小孩很花時間", "父母不知道小孩何時長大"],
                 correct_answer: 0,
@@ -199,7 +199,7 @@
             },
             {
                 proverb_taigi: "近朱者赤，近墨者烏",
-                proverb_lomaji: "Kīn tsu tsiá tshiah, kīn ba̍k tsiá hik",
+                proverb_lomaji: "Kīn tsu tsiá tshiah, kīn ba̍k tsiá oo",
                 category: "學習",
                 options: ["環境對人的影響很大", "紅色和黑色是重要的顏色", "靠近硃砂會變紅", "不要靠近墨水"],
                 correct_answer: 0,
